--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,14 @@
 
         </canvas>
 
+        <div>
+            ctrl: jump <br />
+            alt gr: pogo <br />
+            space: shoot <br />
+            left: arrow left <br />
+            right: arrow right
+        </div>
+
         <script src="./main.js"></script>
     </body>
 </html>
