pushing old code to legacy

--- a/legacy/src/index.html
+++ b/legacy/src/index.html
@@ -5,9 +5,10 @@
     <body>
         
         <canvas id="battlefield" width="800px" height="600px" style="background-color: aqua;">
-
+            
 
         </canvas>
+        <canvas width="800px" height="600px" style="background-color: brown;"></canvas>
 
         <div>
             ctrl: jump <br />
